[tool.poetry]
name = "daily-sea-surface-temperature"
version = "0.1.0"
description = "A notebook containing visualization of the daily sea surface temperature from climatereanalyzer.org"
authors = ["Marcus Garsdal <garsdal@live.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
plotly = "^5.20.0"
ipykernel = "^6.29.3"
nbformat = "^5.10.3"
kaleido = "0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
